...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.judopay.view.JudoEditText
                    android:id="@+id/card_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_number_label"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:id="@+id/start_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.judopay.view.JudoEditText
                    android:id="@+id/start_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_label"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/issue_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.judopay.view.JudoEditText
                        android:id="@+id/issue_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/issue_number_label" />

                </com.google.android.material.textfield.TextInputLayout>

...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.judopay.view.JudoEditText
                    android:id="@+id/expiry_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/expiry_date_label"
                    tools:ignore="TextFields" />

...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/security_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.judopay.view.JudoEditText
                    android:id="@+id/security_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/security_code" />

            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <com.judopay.view.JudoEditText
                    android:id="@+id/post_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/billing_postcode"
                    android:imeOptions="actionDone"
                    tools:ignore="UnusedAttribute" />
...
