...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/payment_button"
            style="@style/list_button"
            android:onClick="performPayment">

            <TextView
                style="@style/list_button_primary_text"
                android:text="@string/payment" />
...
