<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/web_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.judopay.secure3d.ThreeDSecureWebView
        android:id="@+id/three_d_secure_web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>